# browser-agent

./: LICENSE  README.md  SKILL.md  pyproject.toml
docs/: DESIGN.md
examples/: basic_usage.py  e2e_extended.py  e2e_test.py  manop_api_test.py  manop_cloud_test.py  ollama_e2e.py  test_v0.1.1_e2e.py
src/browser_agent/: __init__.py  agent.py  browser.py  cli.py  config.py  mcp_server.py  supervisor.py
src/browser_agent/executors/: __init__.py  mano_p.py  playwright.py
src/browser_agent/models/: __init__.py  base.py  mano_p.py  ollama.py  openai.py  router.py  vllm.py
src/browser_agent/tools/: __init__.py  browser_tools.py
src/browser_agent/utils/: __init__.py  logger.py
src/browser_agent/vision/: __init__.py  find_pois.js
tests/: test_agent_supervised.py  test_config.py  test_manop.py  test_models.py  test_supervisor.py  test_tools.py  test_utils.py
